--- a/docker/nginx/conf.d/rtmp.conf
+++ b/docker/nginx/conf.d/rtmp.conf
@@ -16,7 +16,7 @@ rtmp {
 			# NOTE: This line should point to your streamauth.php.
 			# However, if you intend to run the site on SSL, the on_publish directive will NOT work with SSL,
 			# so you will need to use a proxy. See lines 1-12 of /sites-available/main.conf.
-			on_publish http://proxy.url:8080/on_publish;
+			on_publish http://php:8080/on_publish;
 			notify_method get;
 
 			# executes the rolling screenshots script. There are probably better ways of accomplishing this
