--- a/src/nginx/sites-available/main.conf
+++ b/src/nginx/sites-available/main.conf
@@ -1,37 +1,31 @@
 # This server block is used as a proxy to enable the on_publish directive to access an SSL page, as it doesn't directly support it. 
 # If you're not using SSL, you can remove this block and simply point to the streamauth.php on line 27 of /conf.d/rtmp.conf
-server {
-	listen 8080;
-	listen [::]:8080;
-	location /on_publish {
-		#allow 127.0.0.1;
-		allow all;
-		deny all;
-		proxy_pass https://yoursite.com/lib/streamauth.php;
-	}
-}
+# server {
+# 	listen 8080;
+# 	listen [::]:8080;
+# 	location /on_publish {
+# 		#allow 127.0.0.1;
+# 		allow all;
+# 		deny all;
+# 		proxy_pass http://php/lib/streamauth.php;
+# 	}
+# }
 
 # This block enforces SSL. If you're not using SSL, you can remove it and change the next server block to listen over port 80.
+# server {
+# 	listen 80 default_server;
+# 	listen [::]:80 default_server;
+
+# 	return 301 https://$host$request_uri;
+# }
+
 server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
+		listen 80;
 
-	return 301 https://$host$request_uri;
-}
-
-server {
-		listen   443 ssl;
-
-		server_name     yoursite.com;
-
-		ssl    on;
-		ssl_config_goes_here
-
-		add_header Strict-Transport-Security max-age=15768000;
-        add_header Cache-Control no-cache;
+    add_header Cache-Control no-cache;
 
         # To avoid issues with cross-domain HTTP requests
-        add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Origin *;
 
         # Adjust root directory as needed
         root /var/www/html;
