--- a/docker/nginx/sites-available/main.conf
+++ b/docker/nginx/sites-available/main.conf
@@ -1,152 +1,147 @@
 # This server block is used as a proxy to enable the on_publish directive to access an SSL page, as it doesn't directly support it. 
 # If you're not using SSL, you can remove this block and simply point to the streamauth.php on line 27 of /conf.d/rtmp.conf
 server {
-	listen 8080;
-	listen [::]:8080;
-	location /on_publish {
-		#allow 127.0.0.1;
-		allow all;
-		deny all;
-		proxy_pass https://yoursite.com/lib/streamauth.php;
-	}
+    listen 8080;
+    listen [::]:8080;
+    location /on_publish {
+	#allow 127.0.0.1;
+	allow all;
+	deny all;
+	proxy_pass http://php/lib/streamauth.php;
+    }
 }
 
 # This block enforces SSL. If you're not using SSL, you can remove it and change the next server block to listen over port 80.
-server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
+# server {
+#     listen 80 default_server;
+#     listen [::]:80 default_server;
 
-	return 301 https://$host$request_uri;
+#     return 301 https://$host$request_uri;
+# }
+
+server {
+    # listen   443 ssl;
+    listen   80;
+    #server_name     yoursite.com;
+
+    # ssl    on;
+    # ssl_config_goes_here
+
+    add_header Strict-Transport-Security max-age=15768000;
+    add_header Cache-Control no-cache;
+
+    # To avoid issues with cross-domain HTTP requests
+    add_header Access-Control-Allow-Origin *;
+
+    # Adjust root directory as needed
+    root /app;
+    index index.php index.html index.htm;
+
+    location / {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Expose-Headers' 'Content-Length';
+        add_header 'Access-Control-Allow-Headers' 'Range';
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+
+            # Custom headers and headers various browsers *should* be OK with but aren't
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+
+            # Tell client that this pre-flight info is valid for 20 days
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+
+            return 204;
+        }
+
+        if ($request_method = 'POST') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        }
+
+        if ($request_method = 'GET') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        }
+
+        # URL rewrite for pretty urls. **required**
+        rewrite /(.*)$ / break;
+    }
+
+    # Let's Encrypt location, remove if you don't use
+    location ~ /.well-known {
+        allow all;
+    }
+
+    # PHP-FPM connector, adjust as needed if you use a different method for PHP
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+    }
+
+    # Rewrite for index, popout player, reset form, and REST API
+    rewrite /login(.*)$ /login.php last;
+    rewrite /popout/(.*)$ /lib/popout.php last;
+    rewrite /lostpass(.*)$ /reset.php last;
+
+    location /api {
+        # Attempt to remove the access log as the ping function can be kinda chatty.
+        # This doesn't work (it still logs), but I'm open to suggestions
+        access_log off;
+        rewrite /(.*)$ /api/index.php last;
+    }
+
+    # Required to exclude our data locations from URL rewrite
+    location /css { }
+    location /img { }
+    location /inc { }
+    location /js { }
+    location /lib { }
+    location /xsl { }
+    location /profiles { }
+
+    # Serve recorded sessions, adjust as needed.
+    # NOTE: This needs to match the location set for the 'rec' recorder block in rtmp.conf
+    location /rec {
+        root /var/rachni;
+        autoindex on; # directory list accepted, turn off to hide videos from the public
+    }
+
+    # RTMP stat
+    location /stat {
+        access_log off;
+        rtmp_stat all;
+        rtmp_stat_stylesheet stat.xsl;
+    }
+
+    location /stat.xsl {
+        access_log off;
+        root /var/www/html/xsl/;
+    }
+
+    # RTMP control
+    location /control {
+        allow 127.0.0.1;
+        # allow your.ser.ver.ip;
+        deny all;
+        rtmp_control all;
+    }
+
+    # Used to grab current viewer count
+    location /nclients {
+        satisfy any;
+        allow all;
+        deny all;
+        # proxy_pass https://stream.rachni.com/stat;
+        xslt_stylesheet /app/xsl/nclients.xsl app='$arg_app' name='$arg_name';
+        add_header Refresh "3; $request_uri";
+    }
+
 }
-
-server {
-		listen   443 ssl;
-
-		server_name     yoursite.com;
-
-		ssl    on;
-		ssl_config_goes_here
-
-		add_header Strict-Transport-Security max-age=15768000;
-        add_header Cache-Control no-cache;
-
-        # To avoid issues with cross-domain HTTP requests
-        add_header Access-Control-Allow-Origin *;
-
-        # Adjust root directory as needed
-        root /var/www/html;
-        index index.php index.html index.htm;
-
-        location / {
-        	add_header 'Access-Control-Allow-Origin' '*';
-        	add_header 'Access-Control-Expose-Headers' 'Content-Length';
-        	add_header 'Access-Control-Allow-Headers' 'Range';
-        	if ($request_method = 'OPTIONS') {
-        		add_header 'Access-Control-Allow-Origin' '*';
-        		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-
-        		# Custom headers and headers various browsers *should* be OK with but aren't
-        		add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-
-        		# Tell client that this pre-flight info is valid for 20 days
-        		add_header 'Access-Control-Max-Age' 1728000;
-        		add_header 'Content-Type' 'text/plain charset=UTF-8';
-        		add_header 'Content-Length' 0;
-
-        		return 204;
-        	}
-
-        	if ($request_method = 'POST') {
-        		add_header 'Access-Control-Allow-Origin' '*';
-        		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        		add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-        	}
-
-        	if ($request_method = 'GET') {
-        		add_header 'Access-Control-Allow-Origin' '*';
-        		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        		add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-        	}
-
-        	# URL rewrite for pretty urls. **required**
-        	rewrite /(.*)$ / break;
-        }
-
-        # Let's Encrypt location, remove if you don't use
-        location ~ /.well-known {
-        	allow all;
-        }
-
-        # PHP-FPM connector, adjust as needed if you use a different method for PHP
-        location ~ \.php$ {
-        	try_files $uri =404;
-        	fastcgi_pass 127.0.0.1:9000;
-        	fastcgi_index index.php;
-        	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        	include fastcgi_params;
-        }
-
-        # Rewrite for index, popout player, reset form, and REST API
-        rewrite /login(.*)$ /login.php last;
-        rewrite /popout/(.*)$ /lib/popout.php last;
-        rewrite /lostpass(.*)$ /reset.php last;
-
-        location /api {
-        	# Attempt to remove the access log as the ping function can be kinda chatty.
-        	# This doesn't work (it still logs), but I'm open to suggestions
-        	access_log off;
-        	rewrite /(.*)$ /api/index.php last;
-        }
-
-        # Required to exclude our data locations from URL rewrite
-        location /css { }
-        location /img { }
-        location /inc { }
-        location /js { }
-        location /lib { }
-        location /xsl { }
-        location /profiles { }
-
-        # Serve recorded sessions, adjust as needed.
-        # NOTE: This needs to match the location set for the 'rec' recorder block in rtmp.conf
-        location /rec {
-        	root /var/rachni;
-        	autoindex on; # directory list accepted, turn off to hide videos from the public
-        }
-
-        # RTMP stat
-        location /stat {
-        	access_log off;
-        	rtmp_stat all;
-        	rtmp_stat_stylesheet stat.xsl;
-        }
-
-        location /stat.xsl {
-        	access_log off;
-        	root /var/www/html/xsl/;
-        }
-
-        # RTMP control
-        location /control {
-        	allow 127.0.0.1;
-        	allow your.ser.ver.ip;
-         	deny all;
-        	rtmp_control all;
-        }
-
-        # Used to grab current viewer count
-        location /nclients {
-        	satisfy any;
-        	allow all;
-        	deny all;
-        	proxy_pass https://stream.rachni.com/stat;
-        	xslt_stylesheet /var/www/html/xsl/nclients.xsl app='$arg_app' name='$arg_name';
-        	add_header Refresh "3; $request_uri";
-        }
-
-		# Custom error page not included
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-        	root   html;
-        }
-
