--- a/src/nginx/shared.conf
+++ b/src/nginx/shared.conf
@@ -4,7 +4,7 @@ add_header Cache-Control no-cache;
 # To avoid issues with cross-domain HTTP requests
 add_header Access-Control-Allow-Origin *;
 
-root /var/www/html;
+root /app
 index index.php index.html index.htm;
 
 location / {
@@ -48,7 +48,7 @@ location ~ /.well-known {
 
 location ~ \.php$ {
 	try_files $uri =404;
-	fastcgi_pass 127.0.0.1:9000;
+	fastcgi_pass php:9000;
 	fastcgi_index index.php;
 	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	include fastcgi_params;
@@ -60,7 +60,7 @@ rewrite /popout/(.*)$ /lib/popout.php last;
 rewrite /lostpass(.*)$ /reset.php last;
 
 location /api {
-	access_log off;
+	access_log on;
 	rewrite /(.*)$ /api/index.php last;
 }
 
@@ -79,52 +79,52 @@ location /rec {
 	autoindex on; # directory list accepted
 }
 
-# Serve HLS fragments
-location /hls {
-	root /var/rachni;
-	add_header Cache-Control no-cache;
-	add_header Access-Control-Allow-Origin *;
-	add_header Access-Control-Expose-Headers Content-Length;
-	add_header Access-Control-Allow-Headers Range;
-	if ($request_method = 'OPTIONS') {
-		add_header 'Access-Control-Allow-Origin' '*';
-		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+# # Serve HLS fragments
+# location /hls {
+# 	root /var/rachni;
+# 	add_header Cache-Control no-cache;
+# 	add_header Access-Control-Allow-Origin *;
+# 	add_header Access-Control-Expose-Headers Content-Length;
+# 	add_header Access-Control-Allow-Headers Range;
+# 	if ($request_method = 'OPTIONS') {
+# 		add_header 'Access-Control-Allow-Origin' '*';
+# 		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
 
-		# Custom headers and headers various browsers *should* be OK with but aren't
-		add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+# 		# Custom headers and headers various browsers *should* be OK with but aren't
+# 		add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
 
-		# Tell client that this pre-flight info is valid for 20 days
-		add_header 'Access-Control-Max-Age' 1728000;
-		add_header 'Content-Type' 'text/plain charset=UTF-8';
-		add_header 'Content-Length' 0;
-		return 204;
-	}
+# 		# Tell client that this pre-flight info is valid for 20 days
+# 		add_header 'Access-Control-Max-Age' 1728000;
+# 		add_header 'Content-Type' 'text/plain charset=UTF-8';
+# 		add_header 'Content-Length' 0;
+# 		return 204;
+# 	}
 
-	if ($request_method = 'POST') {
-		add_header 'Access-Control-Allow-Origin' '*';
-		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-		add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-	}
+# 	if ($request_method = 'POST') {
+# 		add_header 'Access-Control-Allow-Origin' '*';
+# 		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+# 		add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+# 	}
 
-	if ($request_method = 'GET') {
-		add_header 'Access-Control-Allow-Origin' '*';
-		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-		add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-	}
+# 	if ($request_method = 'GET') {
+# 		add_header 'Access-Control-Allow-Origin' '*';
+# 		add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+# 		add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+# 	}
 
-	types {
-		application/vnd.apple.mpegurl m3u8;
-		video/mp2t ts;
-	}
-}
+# 	types {
+# 		application/vnd.apple.mpegurl m3u8;
+# 		video/mp2t ts;
+# 	}
+# }
 
-# Serve DASH fragments
-location /dash {
-	root /var/rachni;
-	add_header Cache-Control no-cache;
-	# To avoid issues with cross-domain HTTP requests (e.g. during development)
-	add_header Access-Control-Allow-Origin *;
-}
+# # Serve DASH fragments
+# location /dash {
+# 	root /var/rachni;
+# 	add_header Cache-Control no-cache;
+# 	# To avoid issues with cross-domain HTTP requests (e.g. during development)
+# 	add_header Access-Control-Allow-Origin *;
+# }
 
 # RTMP Stat
 location /stat {
@@ -156,9 +156,4 @@ location /nclients {
 	proxy_pass https://stream.rachni.com/stat;
 	xslt_stylesheet /var/www/html/xsl/nclients.xsl app='$arg_app' name='$arg_name';
 	add_header Refresh "3; $request_uri";
-}
-
-error_page   500 502 503 504  /50x.html;
-location = /50x.html {
-	root   html;
 }
